Do not use GetFirstResponderSubview on iOS 10.

When a WKWebView is displaying a PDF, the first responder is not in the view hierarchy (but a class adhering to UIResponder).

Bug: 882470
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I6f9e993e740541b7cf009b1d11e16183b409fdae
Reviewed-on: https://chromium-review.googlesource.com/c/1284438
Commit-Queue: Mike Dougherty <michaeldo@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600620}